<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/pantallabienvenida"
    tools:context=".Registro">

    <LinearLayout
        android:layout_width="375dp"
        android:layout_height="456dp"
        android:layout_marginTop="96dp"
        android:background="@mipmap/cuadrado"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.05">

        <TextView
            android:id="@+id/iniciarSesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/contrasena"
            android:text="@string/RegistroPantalla"
            android:textAlignment="center"
            android:textColor="#1C5D99"
            android:textSize="28sp" />

        <EditText
            android:id="@+id/nombre_pt"
            android:layout_width="257dp"
            android:layout_height="50dp"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="text"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/usuario_pt"
            android:layout_width="257dp"
            android:layout_height="50dp"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:hint="@string/usuario"
            android:inputType="text"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/contra_pt"
                android:layout_width="209dp"
                android:layout_height="52dp"
                android:layout_marginBottom="0dp"
                android:ems="10"
                android:hint="@string/contrasena"
                android:inputType="textPassword"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="51dp"
                android:layout_height="46dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:backgroundTint="#00FFFFFF"
                android:onClick="ocultar"
                android:scaleType="centerCrop"
                app:srcCompat="@mipmap/ojo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/contra_pt"
                android:layout_width="209dp"
                android:layout_height="52dp"
                android:layout_marginBottom="0dp"
                android:ems="10"
                android:hint="@string/repetir_contrasena"
                android:inputType="textPassword"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="51dp"
                android:layout_height="46dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:backgroundTint="#00FFFFFF"
                android:onClick="ocultar2"
                android:scaleType="centerCrop"
                app:srcCompat="@mipmap/ojo" />
        </LinearLayout>

        <Button
            android:id="@+id/iniciar_sesion_bot"
            android:layout_width="272dp"
            android:layout_height="62dp"
            android:backgroundTint="#1C5D99"
            android:onClick="registrarse"
            android:text="@string/registrarse"
            android:textSize="24sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:fontFamily="@font/hind_medium"
        android:text="@string/bienvenida"
        android:textColor="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/nombreEmpresa"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>